# agent-sql-schema

./: .env.example  .gitignore  API_REFERENCE.md  README.md  pyproject.toml  requirements.txt
agent/: celery.py  settings.py  urls.py
core/: admin.py  connection_views.py  llm_models.py  ltm_agent.py  ltm_schema.py  memory_views.py  models.py  prompt.py  schema_agent.py  schema_views.py  serializers.py  sql_agent.py  sql_views.py  streaming.py  tasks.py  urls.py  utils.py  views.py
core/management/commands/: reindex_search.py  setup_memory.py  setup_pgmemory.py
core/migrations/: 0001_initial.py  0002_chatsession.py  0002_customuser_email_verified.py  0002_tokenusage.py  0003_schemaproject.py  0004_chatsession_is_starred.py  0005_schemaproject_is_starred.py  0006_schemaproject_sql_edited_manually.py  0007_conversationmessage.py
core/services/: chat_history_formatter.py  connection.py  email.py  memory.py  sample_data.py  schema_graph.py  search_index.py  sql_graph.py  sql_prompt.py  sql_toolkit.py
core/templates/emails/: base_email.html  password_reset.html  password_reset.txt  verify_email.html  verify_email.txt
